--- a/index.html
+++ b/index.html
@@ -1,34 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
-  <title>Ejercicio Practica</title>
-</head>
-<body>
-  <main>
-    <article class="card">
-      <div class="card_header">
-        <div class="card_header-perfil">
-          <img src="./img/perfil-main.png" alt="Pefil Principal">
-          <p>Saurabh Kumar <span>12hr . Updated</span></p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Ejercicio Practica</title>
+  </head>
+  <body>
+    <main>
+      <article class="card">
+        <div class="card_header">
+          <div class="card_header-perfil">
+            <img src="./img/perfil-main.png" alt="Pefil Principal" />
+            <p>Saurabh Kumar <span>12hr . Updated</span></p>
+          </div>
+          <img src="./img/opciones.png" alt="Icono Opciones" />
         </div>
-        <img src="./img/opciones.png" alt="Icono Opciones">
-      </div>
-      <div class="card_body">
-        <div class="card_body-description">
-          <p>Union Health Minister Shri Mansukh Mandaviya reviews #COVID19
-            response in Kerala with Chief Minister Shri Pinarayi Vijayan and
-            Health Minister of Kerala, Ms. Veena George.…</p>
+        <div class="card_body">
+          <div class="card_body-description">
+            <p>
+              Union Health Minister Shri Mansukh Mandaviya reviews #COVID19
+              response in Kerala with Chief Minister Shri Pinarayi Vijayan and
+              Health Minister of Kerala, Ms. Veena George.…
+            </p>
             <span>See more</span>
+          </div>
+          <img
+            class="card_body-img"
+            src="./img/img-post.png"
+            alt="Imagen Post"
+          />
+          <div class="card_body-stats">
+            <div class="card_body-stats_item">
+              <img src="./img/icon-heart.png" alt="Icono Corazón" />
+              <span>132</span>
+            </div>
+            <div class="card_body-stats_item">
+              <img src="./img/icon-comment.png" alt="Icono Comentario" />
+              <span>4</span>
+            </div>
+            <div class="card_body-stats_item">
+              <img src="./img/icon-share.png" alt="Icono Compartir" />
+              <span>45</span>
+            </div>
+          </div>
         </div>
-        <img class="card_body-img" src="./img/img-post.png" alt="Imagen Post">
-        <div class="card_body-stats"></div>
-      </div>
-      <div class="card_footer"></div>
-    </article>
-  </main>
-</body>
+        <div class="card_footer">
+          <img src="./img/perfil-secundario.png" alt="Perfil Secundario" />
+          <div class="card_footer-input">
+            <input type="text" placeholder="Add a Comment ..." />
+          </div>
+        </div>
+      </article>
+    </main>
+  </body>
 </html>
+
+<!-- https://www.figma.com/file/D8404swf7obFSuA9Ryirvs/Ui%2FUx-Designer-Portfolio-(Community)?node-id=0%3A1 -->
